--- a/extension/src/components/SearchResultItem.module.css
+++ b/extension/src/components/SearchResultItem.module.css
@@ -21,7 +21,7 @@
     color: #fff;
     border-bottom: 1px solid #acacaf;
 
-    display: -webkit-box;
+    display: inline;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
