--- a/extension/src/components/Header.module.css
+++ b/extension/src/components/Header.module.css
@@ -12,3 +12,11 @@
     text-align: center;
     font-weight: 800;
 }
+
+.actionsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: orange;
+}
