feat(extension): add standalone mode for the search UI extension

--- a/extension/src/App.module.css
+++ b/extension/src/App.module.css
@@ -1,3 +1,10 @@
 .container {
     color: #646cff;
 }
+
+.standaloneContainer {
+    padding: 20px;
+    overflow-y: hidden;
+    max-height: 100vh;
+    box-sizing: border-box;
+}
