--- a/extension/src/index.css
+++ b/extension/src/index.css
@@ -1,8 +1,4 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -12,6 +8,10 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
+    --font-main: Helvetica, Arial, sans-serif;
+
+    --primary: #18181a;
+    --app-frame-bg: #fff;
     --primary-200: #cfcfd1;
     --primary-300: #9f9fa5;
     --search-result-title: #18181a;;
@@ -20,15 +20,21 @@
     --search-result-content-text: #5a5a60;;
     --search-result-date-bg: #f3f3f3;
     --search-result-url-link: #707077;
+    --color-search-input: #fff;
+    --color-search-input-border: #e6e6e8;;
 
     @media (prefers-color-scheme: dark) {
+        --app-frame-bg: #232325;
+        --primary: #e6e6e8;
         --primary-200: #454549;
-        --primary-300: #3a3a3e;
+        --primary-300: #acacaf;
         --search-result-title: #fff;
         --search-result-title-hover: #c0b8ff;
         --result-item-title-border: #acacaf;
         --search-result-content-text: #acacaf;
         --search-result-date-bg: #454549;
         --search-result-url-link: #cfcfd1;
+        --color-search-input: #454549;
+        --color-search-input-border: #707077;
     }
 }
