feat: add separate build scripts and output directories for web and extension targets

--- a/extension/src/reset.css
+++ b/extension/src/reset.css
@@ -51,7 +51,7 @@ button {
     color: unset;
     border-radius: 0;
     text-transform: none;
-    ont-family: inherit;
+    font-family: inherit;
     font-size: inherit;
     line-height: inherit;
     margin: 0;
