feat: enhance UI/UX by adjusting alignments, updating placeholders, and refining data handling
- Adjust actions container alignment for better visual balance
- Update input placeholder for clarity and engagement
- Implement conditional rendering based on `small` prop for Dot component
- Ensure dynamic length display for Dot components to reflect current state
- Optimize query handling across components and hooks for efficiency and responsiveness

--- a/extension/src/components/Header.module.css
+++ b/extension/src/components/Header.module.css
@@ -16,9 +16,10 @@
 .actionsContainer {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 10px;
     color: orange;
+    flex: 1;
 }
 
 .optionsButton {
@@ -32,4 +33,12 @@
     &:hover {
         background-color: var(--primary-300);
     }
+}
+
+.dotsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
+    flex: 1;
 }
