--- a/extension/src/components/Dot.module.css
+++ b/extension/src/components/Dot.module.css
@@ -1,3 +1,15 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+.length {
+    margin-right: 10px;
+}
+
 .dot {
     width: 14px;
     height: 14px;
