--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,7 @@
     border-bottom: 1px solid var(--primary-200);
     margin-bottom: 20px;
     color: var(--search-result-title);
-    font-size: 14px;
+    font-size: 1rem;
 }
 
 .text {
