--- a/src/components/SearchResultItem.module.css
+++ b/src/components/SearchResultItem.module.css
@@ -13,7 +13,7 @@
 }
 
 .title {
-    font-size: 18px;
+    font-size: 1rem;
     color: var(--search-result-title);
     border-bottom: 1px solid var(--result-item-title-border);
 
@@ -34,11 +34,11 @@
 
 .url {
     color: var(--search-result-url-link);
-    font-size: 14px;
+    font-size: .9rem;
 }
 
 .description {
-    font-size: 14px;
+    font-size: .875rem;
     color: var(--search-result-content-text);
     margin: 0;
 
